{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 107,
  "lineage": "5e544fe2-e2b2-d246-8ca2-90f22e02f4eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0476ee53ea7bd56dc",
            "associate_public_ip_address": true,
            "get_password_data": false,
            "id": "i-01a9354609509510a",
            "instance_type": "m6i.2xlarge",
            "key_name": "prisma-dicio-key",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f63790c8c7352a0",
            "tags": {
              "Name": "prisma-dicio-server"
            },
            "tags_all": {
              "Name": "prisma-dicio-server"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b76600cc15efcc04"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh",
            "aws_security_group.ec2",
            "aws_subnet.virginia_public_1",
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ohio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218185924:internet-gateway/igw-076c21df04e5e3fc7",
            "id": "igw-076c21df04e5e3fc7",
            "owner_id": "343218185924",
            "tags": {
              "Name": "prisma-dicio-igw-ohio"
            },
            "tags_all": {
              "Name": "prisma-dicio-igw-ohio"
            },
            "vpc_id": "vpc-0d58666c164b95c33"
          },
          "dependencies": [
            "aws_vpc.ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218185924:internet-gateway/igw-03d73b80d162bfb61",
            "id": "igw-03d73b80d162bfb61",
            "owner_id": "343218185924",
            "tags": {
              "Name": "prisma-dicio-igw-virginia"
            },
            "tags_all": {
              "Name": "prisma-dicio-igw-virginia"
            },
            "vpc_id": "vpc-0f9e3e719b526f689"
          },
          "dependencies": [
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohio_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218185924:route-table/rtb-015fe5f2e104bfdb5",
            "id": "rtb-015fe5f2e104bfdb5",
            "owner_id": "343218185924",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076c21df04e5e3fc7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prisma-dicio-rt-ohio"
            },
            "tags_all": {
              "Name": "prisma-dicio-rt-ohio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58666c164b95c33"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ohio",
            "aws_vpc.ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "virginia_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218185924:route-table/rtb-0c8442aef3e38aaae",
            "id": "rtb-0c8442aef3e38aaae",
            "owner_id": "343218185924",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d73b80d162bfb61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prisma-dicio-rt-virginia"
            },
            "tags_all": {
              "Name": "prisma-dicio-rt-virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9e3e719b526f689"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.virginia",
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohio_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0da5e6501ce47e1",
            "route_table_id": "rtb-015fe5f2e104bfdb5",
            "subnet_id": "subnet-02136a7cb176e50a6"
          },
          "dependencies": [
            "aws_internet_gateway.ohio",
            "aws_route_table.ohio_public",
            "aws_subnet.ohio_public_1",
            "aws_vpc.ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohio_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09165ac51a2ea9658",
            "route_table_id": "rtb-015fe5f2e104bfdb5",
            "subnet_id": "subnet-04be5f3bbe25bce40"
          },
          "dependencies": [
            "aws_internet_gateway.ohio",
            "aws_route_table.ohio_public",
            "aws_subnet.ohio_public_2",
            "aws_vpc.ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virginia_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e227fd2dd08d85bb",
            "route_table_id": "rtb-0c8442aef3e38aaae",
            "subnet_id": "subnet-04f63790c8c7352a0"
          },
          "dependencies": [
            "aws_internet_gateway.virginia",
            "aws_route_table.virginia_public",
            "aws_subnet.virginia_public_1",
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virginia_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea4397b366d7420a",
            "route_table_id": "rtb-0c8442aef3e38aaae",
            "subnet_id": "subnet-00a2be1208bc80c64"
          },
          "dependencies": [
            "aws_internet_gateway.virginia",
            "aws_route_table.virginia_public",
            "aws_subnet.virginia_public_2",
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218185924:security-group/sg-0b76600cc15efcc04",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b76600cc15efcc04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prisma-dicio-sg",
            "name_prefix": "",
            "owner_id": "343218185924",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prisma-dicio-sg"
            },
            "tags_all": {
              "Name": "prisma-dicio-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9e3e719b526f689"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohio_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218185924:subnet/subnet-02136a7cb176e50a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.40.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02136a7cb176e50a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218185924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisma-dicio-public-2a"
            },
            "tags_all": {
              "Name": "prisma-dicio-public-2a"
            },
            "vpc_id": "vpc-0d58666c164b95c33"
          },
          "dependencies": [
            "aws_vpc.ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohio_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218185924:subnet/subnet-04be5f3bbe25bce40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.40.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04be5f3bbe25bce40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218185924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisma-dicio-public-2b"
            },
            "tags_all": {
              "Name": "prisma-dicio-public-2b"
            },
            "vpc_id": "vpc-0d58666c164b95c33"
          },
          "dependencies": [
            "aws_vpc.ohio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "virginia_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218185924:subnet/subnet-04f63790c8c7352a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.40.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f63790c8c7352a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218185924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisma-dicio-public-1a"
            },
            "tags_all": {
              "Name": "prisma-dicio-public-1a"
            },
            "vpc_id": "vpc-0f9e3e719b526f689"
          },
          "dependencies": [
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "virginia_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218185924:subnet/subnet-00a2be1208bc80c64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.40.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a2be1208bc80c64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218185924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisma-dicio-public-1b"
            },
            "tags_all": {
              "Name": "prisma-dicio-public-1b"
            },
            "vpc_id": "vpc-0f9e3e719b526f689"
          },
          "dependencies": [
            "aws_vpc.virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ohio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:343218185924:vpc/vpc-0d58666c164b95c33",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.40.2.0/24",
            "default_network_acl_id": "acl-041f9e774a88db7b1",
            "default_route_table_id": "rtb-09944988fe92189ca",
            "default_security_group_id": "sg-02522b05968563eb1",
            "dhcp_options_id": "dopt-0dae5b368bed30daa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d58666c164b95c33",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0947a761b75e764f2",
            "ipv6_cidr_block": "2600:1f16:71a:b500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09944988fe92189ca",
            "owner_id": "343218185924",
            "tags": {
              "Name": "prisma-dicio"
            },
            "tags_all": {
              "Name": "prisma-dicio"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218185924:vpc/vpc-0f9e3e719b526f689",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.40.1.0/24",
            "default_network_acl_id": "acl-0cebe9996fa92337b",
            "default_route_table_id": "rtb-0cc718b674271c0f1",
            "default_security_group_id": "sg-028dcd9a73cc324ff",
            "dhcp_options_id": "dopt-0a96c19a7cfe99dba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9e3e719b526f689",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0c3dab950c7af5d18",
            "ipv6_cidr_block": "2600:1f18:510:6d00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc718b674271c0f1",
            "owner_id": "343218185924",
            "tags": {
              "Name": "prisma-dicio"
            },
            "tags_all": {
              "Name": "prisma-dicio"
            }
          }
        }
      ]
    }
  ]
}